k8s/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: patient-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: patient-mgmt/analytics-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: patient-mgmt
spec:
  selector:
    app: analytics-service
  ports:
    - port: 4002
      targetPort: 4002
