k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: patient-mgmt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: patient-mgmt/api-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: patient-mgmt
spec:
  selector:
    app: api-gateway
  ports:
    - port: 4004
      targetPort: 4004
