k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: patient-mgmt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: patient-mgmt/auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: patient-mgmt
spec:
  selector:
    app: auth-service
  ports:
    - port: 4005
      targetPort: 4005
